# shooting_game

./: .gitignore  CMakeLists.txt  CollisionResult.h  README.md  animation.cpp  animation.h  ball.cpp  ball.h  bullet.cpp  bullet.h  combatmanager.cpp  combatmanager.h  dropitem.cpp  dropitem.h  endlessrecordmanager.cpp  endlessrecordmanager.h  endlessresultwidget.cpp  endlessresultwidget.h  entity.cpp  entity.h  game_character.qrc  gameai.cpp  gameai.h  gamesession.h  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  modifierdata.h  modifieroverlay.cpp  modifieroverlay.h  player.cpp  player.h  playercontroller.cpp  playercontroller.h  report_fixed.tex  setupwidget.cpp  setupwidget.h  soundmanager.cpp  (+4 more)
assets/: extract_platforms.py
docs/: PHASE_2_5_DETAILED_IMPLEMENTATION.md  REPORT_PLAN.md  ai_unified_decision_handover_2026-04-22.md  combat_ai_design_and_test_notes_2026-04-21.md  report.tex  课程要求.txt
